tests/paczka1/small_fuzzy/19131720.err
Error in line 5: 1zZQV72zEe A169 68,0
Error in line 12: S596 S409 -5,3
Error in line 7: 1zZQV72zEe S596 99,5
